# uni_pal

./: .gitignore  .gitmodules  README.md
.devcontainer/ubuntu/: Dockerfile  devcontainer.json
.github/: dependencies.repo  to_bash.txt
.github/samples/: 24012025_config.yaml  C087.50065.yaml  README.md  config.yaml  curr.yaml  current.yaml  res.yaml  ur10.yaml  ur_w_pallets.yaml
.github/scripts/: 01_configMTC.sh  01_configWorkspace.sh  02_configMTC.sh  10_startURSim.sh
uni_pal/: CMakeLists.txt  package.xml
uni_pal/launch/: clients.launch.py  moveit_simulation.launch.py  moveit_w_physical_connection.launch.py  mtc_w_physical_connection.launch.py  test_demo.launch.py  urdf.test.launch.py  urdf.test_tmEssential.launch.py  visualize_w_joint_gui.launch.py  visualize_w_physical_connection.launch.py
uni_pal/scripts/: jsonread.py
uni_pal/src/: controller.cpp  robot_client.cpp  robot_republisher.cpp  scene_client.cpp  task_client.cpp  test_node.cpp
uni_pal_cpplib/: CMakeLists.txt  package.xml
uni_pal_cpplib/include/Controller/: Controller.h
uni_pal_cpplib/include/RobotClient/: RobotClient.h
uni_pal_cpplib/include/SceneClient/: SceneClient.h
uni_pal_cpplib/include/TaskClient/: TaskClient.h
uni_pal_cpplib/include/URRepublisher/: URRepublisher.h
uni_pal_cpplib/src/: Controller.cpp  RobotClient.cpp  SceneClient.cpp  TaskClient.cpp  URRepublisher.cpp
uni_pal_cpplib/src/tasks/: create_demo_task_.cpp  create_emergency_homing_task_.cpp  create_homing_task_.cpp  create_pick_place_task_.cpp  create_pick_task_.cpp  create_place_task_.cpp
uni_pal_description/: .setup_assistant  CMakeLists.txt  package.xml
uni_pal_description/config/: .ignore  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ompl_planning.yaml  robot.srdf  robot_config.json
uni_pal_description/meshes/: Paleta_small.stl
uni_pal_description/r_backup/: joint_limits.yaml
uni_pal_description/rviz/: mtc_view.rviz  run_move_group.rviz  view_robot.rviz
uni_pal_description/urdf/: .ignore  box_slipsheets.urdf  box_tape.urdf  gripper.urdf  padding_j3.urdf  padding_j4.urdf  padding_j5.urdf  pallet.urdf  pallet_left.urdf  pallet_right.urdf  robot.urdf.xacro  station.urdf  ur.urdf.xacro
uni_pal_generator/scripts/: config_generator.py  urdf_generator.py
uni_pal_generator/scripts/templates/: joint_limits.py  kinematics.py  launch.py  macros.py  predefined.py  robot_macros.py  srdf.py  urdf.py
uni_pal_msgs/: CMakeLists.txt  package.xml
uni_pal_msgs/msg/: BoxInfo.msg  ConfigParams.msg  Counters.msg  FramePose.msg  PalParams.msg  PalletCounters.msg  PalletInfo.msg  ProgramSettings.msg  RobotAnalog.msg  RobotData.msg  RobotDigital.msg  RobotDynamicInfo.msg  RobotPose.msg  RobotPredefined.msg  RobotRPY.msg  RobotSpecific.msg  RobotState.msg  RobotStaticInfo.msg
uni_pal_msgs/srv/: Empty.srv  ExecuteTask.srv  GetConfigParams.srv  GetPalParams.srv  GetPlacePos.srv  GetPublishedTransforms.srv  SetFrame.srv  SetPalletSide.srv  SetPublishedTransforms.srv
uni_pal_pylib/: CMakeLists.txt  package.xml  setup.py
uni_pal_pylib/utils/: __init__.py
uni_pal_pylib/utils/uni_pal_pylib/: predefined.py  utils.py
