<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>uni_pal</name>
 <version>0.0.1</version>
 <description>Main package for unified palletize application</description>
 <maintainer email="kacper.krasin35@gmail.com">ros2</maintainer>
<license>Apache License 2.0</license>

 <buildtool_depend>ament_cmake</buildtool_depend>
 <buildtool_depend>ament_cmake_python</buildtool_depend>

 <depend>ur</depend>
 <depend>uni_pal_msgs</depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>