<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uni_pal_cpplib</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kacper.krasin35@gmail.com">ros2</maintainer>
  <license>TODO: License declaration</license>

 <buildtool_depend>ament_cmake</buildtool_depend>
 <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>tf2</depend>
  <depend>tf_transformations</depend>
  <depend>uni_pal_msgs</depend>
  <depend>ur_msgs</depend>
  <depend>moveit_task_constructor_core</depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>
