<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>uni_pal_pylib</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="kacper.krasin35@gmail.com">ros2</maintainer>
  <license>TODO: License declaration</license>

  <exec_depend>rclpy</exec_depend>  
  <depend>tf2</depend>
  <depend>python3-transforms3d</depend>
  <depend>tf_transformations</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
